Fix T57390: properties editor crash creating new scene in some cases.